Fixes margins on environment text. It was too close to the image if one existed.

--- a/src/style/site.css
+++ b/src/style/site.css
@@ -646,7 +646,7 @@ ul.footer-icons li {
 }
 
 .embedded-image {
-  margin-left: auto;
+  margin-left: 1rem;
   margin-right: auto;
   max-height: 225px;
 }
@@ -2055,3 +2055,4 @@ tr .panel {
 .overlay {
   transform: translateZ(900px);
 }
+
